--- a/server-j21.0.5/Dockerfile
+++ b/server-j21.0.5/Dockerfile
@@ -4,6 +4,12 @@ RUN apk add udev openjdk21-jre python3 py3-pip py3-boto3
 
 WORKDIR /server
 
+# Info:
+# .--------------------------------------------------------------------------------.
+# | .json files, server.properties and world will be provided when backup is loaded|
+# | server.jar, eula.txt provided in container                                     |
+# | all others files and folders will be created when server.jar is executed       |
+# .--------------------------------------------------------------------------------.
 # Copy build minecraft server files
 COPY src /server
 
