Local build changes, build fixes, add icon, update .gitignore

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mobile",
+    "name": "GDC Minecraft",
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -8,21 +8,29 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.kosiyyu.mobile"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.kosiyyu.mobile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "50219ac1-bbbd-4524-b372-c729a1ff3e85"
+      }
+    },
+    "owner": "kosiyyu"
   }
 }
